Fix Navigation Bar, add logo, adjust alignment, add dummy hire me page

--- a/resume-frontend/src/pages/pages.css
+++ b/resume-frontend/src/pages/pages.css
@@ -66,9 +66,10 @@ p {
 }
 
 .homeContainer {
-    padding-left: .5cm;
+    margin-left: 2em;
+    padding-left: 2em;
     margin: 0px auto;
-    padding: 100px 0px;
+    padding: 2em;
     max-width: 1000px;    
     display: flex;
     -webkit-box-pack: center;
@@ -76,8 +77,7 @@ p {
     -webkit-box-align: center;
     flex-direction: column;
     align-items: flex-start;
-    min-height: 100vh;
-    padding: 0px;
+    min-height: 80vh;
 }
 .home h1 {
     overflow: hidden; /* Ensures the content is not revealed until the animation */
